--- a/pages/M01线性代数.md
+++ b/pages/M01线性代数.md
@@ -1,6 +1,6 @@
 <h1 align="center">线性代数</h1>
 
-<div align="right">最近更新时间：2023-09-08</div>
+<div align="right">最近更新时间：2023-09-30</div>
 
 ## 行列式
 
@@ -87,13 +87,13 @@
 
 ### 特殊行列式求值
 
-| 情况             | 求值技巧                                   |
-|:--------------:|:--------------------------------------:|
-| 对称行列式（主对角线全等）  | 采用累列，外提，用列变换消0，化成上三角                   |
-| 三叉行列式          | 用列变换消0，化成上三角                           |
-| 对称行列式（主对角线非全等） | 采用加边，消为三叉，再按三叉做法                       |
-| 反对称行列式（奇数阶）    | 奇阶为0，因为转置后外提-1                         |
-| 范德蒙得行列式        | $D=\prod_{1≤j<i≤n(all(j<i))}(x_i-x_j)$ |
+| 情况                  | 求值技巧                                   |
+|:-------------------:|:--------------------------------------:|
+| 对称行列式（主对角线全等，其他全等）  | 采用**累列外提**，消其他全等                       |
+| 三叉行列式               | **消一叉**（三叉齐动）                          |
+| 对称行列式（主对角线非全等，其他全等） | 采用**加边**，消其他全等                         |
+| 反对称行列式（奇数阶）         | 奇阶为0，因为转置后外提-1                         |
+| 范德蒙得行列式             | $D=\prod_{1≤j<i≤n(all(j<i))}(x_i-x_j)$ |
 
 - **三叉行列式**：只有主对角、第一行、第一列元素，其他为0
 
@@ -214,13 +214,13 @@
 
 + 对角方阵幂运算，直接对角线上的元素求幂。
 
-+ 求$A^{100}$，对角化求$P^{-1}AP=\wedge$，则$A^{100}=P\wedge^{100}P^{-1}$
++ 求$A^{100}$技巧：对角化求$P^{-1}AP=\wedge$，则$A^{100}=P\wedge^{100}P^{-1}$
   
   证明：左边展开得$P^{-1}APP^{-1}AP...P^{-1}AP=P^{-1}A^{100}P=\wedge^{100}$
 
 ---
 
-#### 矩阵的转置
+#### 矩阵转置
 
         **法则**：第一行写到第一列，以此类推，符号$A_{n×m}，A^T＝A_{m×n}$
 
@@ -233,21 +233,53 @@
 
 ---
 
-### 特殊矩阵
+#### 矩阵除法
 
-| 名称          | 前提  | 说明                     | 性质                                   |
-|:-----------:|:---:|:----------------------:|:------------------------------------:|
-| 对角矩阵        | 方阵  | 只有主对象有元素，其余为0，记作$diag$ | $diag×A$也是对角矩阵                       |
-| 数量矩阵        | 方阵  | 是对角矩阵，且主对角元素全等，记为$kE$  | /                                    |
-| 上三角矩阵、下三角矩阵 | 方阵  | /                      | 三角与三角加减、数乘、转置乘法都是三角矩阵                |
-| 对称矩阵        | 方阵  | $a_{ij}＝a_{ji}$        | $A^T＝A$，对称与对称加减、数乘、转置都是对称矩阵，乘法不是     |
-| 反对称矩阵       | 方阵  | $a_{ij}＝-a_{ji}$       | $A^T＝-A$，反对称与反对称加减、数乘、转置都是反对称矩阵，乘法不是 |
+**概念**：已知矩阵$A、B$，有$AC=B$，求矩阵$C$。**需结合上下文知识点**
 
-+ **可使用交换律的情况**：$AB、A、B$三都是对称矩阵→$A、B$可交换
+| 分类    | 条件      | 说明                                                                                                                             |
+|:-----:|:-------:|:------------------------------------------------------------------------------------------------------------------------------:|
+| 逆矩阵法  | $A$可逆方阵 | $C=A^{-1}B$                                                                                                                    |
+| 解方程组法 | 无       | ①按列拆$C=(c_1 c_2 ... c_n),B=(b_1 b_2 ... b_n)$<br>②分块矩阵运算$Ac_1=b_1,Ac_2=b_2,...,Ac_n=b_n$<br>③按非齐次线性方程组多组求解得$(c_1 c_2 ... c_n)$ |
+| 过渡矩阵法 | $C$可逆方阵 | ①按列拆$A=(a_1 a_2 ... a_n),B=(b_1 b_2 ... b_n)$<br>②求系数非全零的线性表示$b_1=,b_2=,...,b_n=$<br>③用分块矩阵运算，系数构成矩阵$C$                        |
+
++ 过渡矩阵法中方阵$A,B$等价，可看作$A$只做初等列变换$C$得到$B$。
 
 ---
 
-### 矩阵行列式
+#### 特殊矩阵的运算
+
+| 名称          | 前提  | 说明                     | 性质                                       |
+|:-----------:|:---:|:----------------------:|:----------------------------------------:|
+| 对角矩阵        | 方阵  | 只有主对象有元素，其余为0，记作$diag$ | $diag×A$也是对角矩阵                           |
+| 数量矩阵        | 方阵  | 是对角矩阵，且主对角元素全等，记为$kE$  | /                                        |
+| 上三角矩阵、下三角矩阵 | 方阵  | /                      | 三角与三角加减、数乘、转置、**乘法**都是三角矩阵               |
+| 对称矩阵        | 方阵  | $a_{ij}＝a_{ji}$        | $A^T＝A$，对称与对称加减、数乘、转置都是对称矩阵，**乘法不是**     |
+| 反对称矩阵       | 方阵  | $a_{ij}＝-a_{ji}$       | $A^T＝-A$，反对称与反对称加减、数乘、转置都是反对称矩阵，**乘法不是** |
+
++ **可使用交换律的情况**：$AB、A、B$三都是对称矩阵→$A、B$可交换，$AB=BA$
+
+---
+
+### 逆矩阵
+
+        **概念**：$AB$都是方阵，$AB=BA=E$，则$A、B$互为逆矩阵，记$B=A^{-1}$，$A=B^{-1}$。
+
+| 性质                                    | 公式说明                                                   |
+|:-------------------------------------:|:------------------------------------------------------:|
+| 未必所有方阵都可逆，逆矩阵的充分必要条件是$\vert A\vert≠0$ | $\vert A\vert≠0$，又叫非奇异，非退化，满秩，线性无关，特征值无0，**求逆矩阵前必须判断** |
+| 若可逆，是唯一                               | \                                                      |
+| 只需证明1个                                | 若$AB=E$，则$BA=E$                                        |
+| 逆矩阵的逆矩阵是本身                            | $A$可逆，$(A^{-1})^{-1}＝A$                                |
+| **数乘k与逆相关**                           | $A$可逆，$(kA)^{-1}＝k^{-1}A^{-1}$                         |
+| **逆分配结合**                             | $A、B、AB$可逆，$(AB)^{-1}=B^{-1}A^{-1}$                    |
+| **转置求逆无顺序**                           | $A$可逆，$(A^{-1})^T＝(A^T)^{-1}$                          |
+
+- **求法：伴随矩阵法、初等变化法**
+
+---
+
+#### 矩阵行列式
 
         **概念**：$A$是方阵，$...A$表示解构元素，去掉矩阵的包裹$()$，用$\vert\vert$包裹就是该方阵的矩阵行列式$\vert...A\vert$，简记$\vert A\vert$
 
@@ -259,7 +291,7 @@
 
 ---
 
-### 伴随矩阵
+#### 伴随矩阵
 
         **概念**：$A$是方阵，求其矩阵行列式所有元素的代数余子式，按行求的按列放，记$A^*$
 
@@ -273,71 +305,50 @@
 
 ---
 
-### 逆矩阵
+#### 初等变换
 
-        **概念**：$AB$都是方阵，$AB=BA=E$，则$A、B$互为逆矩阵，记$B=A^{-1}$，$A=B^{-1}$。
+        **概念**：对矩阵进行或列变换，不能用＝连接前后，要用->。
 
-| 性质                                    | 公式说明                                                   |
-|:-------------------------------------:|:------------------------------------------------------:|
-| 未必所有方阵都可逆，逆矩阵的充分必要条件是$\vert A\vert≠0$ | $\vert A\vert≠0$，又叫非奇异，非退化，满秩，线性无关，特征值无0，**求逆矩阵前必须判断** |
-| 若可逆，是唯一                               | \                                                      |
-| 只需证明1个                                | 若$AB=E，则BA=E$                                          |
-| 逆矩阵的逆矩阵是本身                            | $A$可逆，$(A^{-1})^{-1}＝A$                                |
-| **数乘k与逆相关**                           | $A$可逆，$(kA)^{-1}＝k^{-1}A^{-1}$                         |
-| **逆分配结合**                             | $A、B、AB$可逆，$(AB)^{-1}=B^{-1}A^{-1}$                    |
-| **转置求逆无顺序**                           | $A$可逆，$(A^{-1})^T＝(A^T)^{-1}$                          |
-
-+ **求法：伴随矩阵法、初等变化法**
+| 序号  | 行变换类型         | 列变换类型         |
+|:---:|:-------------:|:-------------:|
+| 1   | 交换两行          | 交换两列          |
+| 2   | 用$k(k≠0)$乘某一行 | 用$k(k≠0)$乘某一列 |
+| 3   | 某一行乘一数加到另一行上去 | 某一列乘一数加到另一列上去 |
 
 ---
 
-### 分块矩阵
+#### 初等方阵
 
-        **概念**：将矩阵划分为几部分，用于齐次线性方程组的性质，对角化的证明、
+        **概念**：对单位阵$E$进行**一次初等行变换**得到的矩阵，**用于证明所有的初等变换法**
 
-| 分块矩阵运算       | 方法                      |
-|:------------:|:-----------------------:|
-| 分块矩阵加减、数乘、乘法 | 同矩阵加减、数乘、乘法             |
-| 矩阵×分块矩阵的正确思路 | 矩阵看成1行1列的分块矩阵           |
-| 分块矩阵的转置      | 先把子块视作元素求转置，再对每个子块求转置   |
-| 分块矩阵行列式      | 配合一个$O$的分块用拉普拉斯定律       |
-| 分块矩阵求逆       | 需要设逆分块矩阵中每个对应矩阵为未知数，解方程 |
+| 操作                | 初等方阵表示      | 矩阵行列式值 | 左乘A  | 右乘A  |
+|:-----------------:|:-----------:|:------:|:----:|:----:|
+| 交换$i，j$两行         | $E(i,j)$    | $-1$   | A行变换 | A列变换 |
+| 用$k(k≠0)$乘$i$行    | $E(i(k))$   | $k$    | A行变换 | A列变换 |
+| $j$行乘$k$数加到$i$行上去 | $E(i,j(k))$ | $1$    | A行变换 | A列变换 |
 
----
-
-### 初等变换
-
-        **概念**：对矩阵进行变换，不能用＝连接前后，要用->。
-
-| 变换类型          |
-|:-------------:|
-| 交换两行          |
-| 用k(k≠0)乘某一行   |
-| 某一行乘一数加到另一行上去 |
++ 性质：$A$可逆，则$A$等于一系列初等方阵相乘，即$A=R_1R_2...R_n$。
 
 ---
 
 #### 矩阵等价
 
-        **概念**：$A$经初等变换得到$B$，可以认为$A$等价于$B$，
+        **概念1**：$A$经**初等变换**得到$B$，可以认为$A$等价于$B$
 
         **概念2**：矩阵$A、B$、存在可逆矩阵$P、Q$，使得$PAQ=B$
 
-| 性质                 |
-|:------------------:|
-| 反身性、对称性、连续性        |
-| 任何矩阵都等价于它的标准形      |
-| 若$A$等价$B$，则$A、B$同秩 |
+| 性质                          |
+|:---------------------------:|
+| 反身性、对称性、连续性                 |
+| 任何矩阵都等价于它的标准形               |
+| $A$等价于$B$ < = > $A、B$同秩     |
+| $A$可逆 < = > $A$等价于$E$，$A$满秩 |
 
----
-
-#### 等价的特殊形态
-
-| 特殊形态   | 概念                                             | 矩阵的秩对应     | 初等变换      | 用途                       |
-|:------:|:----------------------------------------------:|:----------:|:---------:|:------------------------:|
-| 阶梯形    | 有零行的在非零行下边，每行左起首非零元的左边零个数随行数增加而严格增加（指增加个数必须≥1） | 非零行个数      | 只行变换      | 求矩阵的秩，向量组的秩，极大线性无关组是哪些向量 |
-| 行简化阶梯形 | **阶梯型严格版**，每行首非零元是1，首非零元所在列的其余元素都是0            | 非零行个数      | 只行变换      | 求解线性方程                   |
-| 标准形    | **行简化阶梯型严格版**，主对角线开始可有不间断1，其余都0                | 非零行个数，1的个数 | 只行变换/行列变换 | 求逆矩阵                     |
+| 等价的特殊形态 | 概念                                             | 矩阵的秩对应     | 用途                       |
+|:-------:|:----------------------------------------------:|:----------:|:------------------------:|
+| 阶梯形     | 有零行的在非零行下边，每行左起首非零元的左边零个数随行数增加而严格增加（指增加个数必须≥1） | 非零行个数      | 求矩阵的秩，向量组的秩，极大线性无关组是哪些向量 |
+| 行简化阶梯形  | **阶梯型严格版**，每行首非零元是1，首非零元所在列的其余元素都是0            | 非零行个数      | 求解线性方程组                  |
+| 标准形     | **行简化阶梯型严格版**，主对角线开始可有不间断1，其余都0                | 非零行个数，1的个数 | 求逆矩阵                     |
 
 ---
 
@@ -347,40 +358,27 @@
 
 | 性质                                                        |
 |:---------------------------------------------------------:|
-| $r(A)＝r(A^T)$                                             |
+| $r(A)＝r(A^T)=r(A^TA)$                                     |
 | 乘可逆矩阵，秩不变                                                 |
-| 矩阵乘法有：$r(AB)≤min(r(A),r(B))$                              |
+| 进行初等变换，秩不变                                                |
+| 矩阵乘法有：$r(AB)≤min(r(A),r(B))$，有其一可逆时取等号                    |
 | 分块矩阵有：$r(A \quad B)≥r(A)、r(B \quad A)≥r(B)$，因为化阶梯型求秩是从左往右 |
 
 ---
 
-#### 初等方阵
+#### 逆矩阵的初等变换法
 
-        **概念**：对单位阵$E$**一次**初等变换得到的矩阵，用于证明**满秩可逆**，**初等变换法**
-
-| 操作                | 初等方阵表示      | 矩阵行列式值 | 左乘$A$ | 右乘$A$ |
-|:-----------------:|:-----------:|:------:|:-----:|:-----:|
-| 交换$i，j$两行         | $E(i,j)$    | -1     | 行变换   | 列变换   |
-| 用$k(k≠0)$乘$i$行    | $E(i(k))$   | k      | 行变换   | 列变换   |
-| $j$行乘$k$数加到$i$行上去 | $E(i,j(k))$ | 1      | 行变换   | 列变换   |
-
-+ $A、B$等价 <＝> 存在$P_1P_2...P_sAQ_1Q_2...Q_t＝B$
-
-+ $A$可逆 <＝> $A$的标准形为$E$，$A$满秩
-
-+ $A$可逆 <＝> $A＝R_1R_2...R_f$
-  
-  $$
-  \left \{
+$$
+\left \{
 \begin{array}{c}
-设A^{-1}=R_1R_2...R_f \\
+令A^{-1}=R_1R_2...R_f \\
 (R_1R_2...R_f)A=A^{-1}A=E \\
 (R_1R_2...R_f)E=A^{-1} \\
 \end{array}
 \right .
-  $$
+$$
 
-        **初等变换法**求逆矩阵过程$（A\vert E）->...->（E\vert A^{-1}）$：
+        **初等变换法**求逆矩阵过程$（A\vert E）->（E\vert A^{-1}）$：
 
 1. 写出$(A\vert E)$，先将有1的行提到顶行，分数少，好计算
 
@@ -425,6 +423,7 @@
 | $方阵A所有特征值的和=A主对角线的和=矩阵的迹tr(A)$                       |
 | $方阵A所有特征值的乘积=\vert A\vert$                           |
 | 方阵$A$可逆<=>$A$的特征值无0                                  |
+| $n$阶方阵$A$的秩为$a$<=>$A$有$n-a$个$0$特征值                   |
 | 方阵$A$由各互异的特征值对应的1个特征向量，组合的向量组线性无关                    |
 | 方阵$A$由各互异的特征值对应的多个无关特征向量，组合的向量组线性无关                  |
 | $k$重特征值（$k$个特征值一样）对应的线性无关的特征向量的个数$≤k$                |
@@ -434,6 +433,8 @@
 | 若$\lambda$是方阵$A$的特征值，那么$\lambda+k$也是$A+kE$的特征值       |
 | 若$\lambda$是方阵$A$的特征值，那么$\lambda^{-1}$也是$A^{-1}$的特征值  |
 | 若$\vert a＋bA\vert＝0$，则$\lambda＝-a/b$                 |
+
+---
 
 #### 矩阵相似
 
@@ -447,9 +448,11 @@
 | 若$A相似于B$，则$A^k相似于B^k$                                                  |
 | 若$A相似于\wedge$<＝>  $A$有$n$个线性无关的特征向量                                    |
 
++ $A$的迹$tr(A)$是未经初等变换，**原矩阵的对角线和**。
+
 ---
 
-#### 相似矩阵间的初等变换
+#### 相似矩阵间的初等变换法
 
        **初等变换法证明**：$P^{-1}AP＝B$
 
@@ -470,21 +473,28 @@ $$
 
 2. $A$化为$B$，$E$即化为$P$
 
-| 初等列变换                         | 矩阵相似对应的行变换                      |
-|:-----------------------------:|:-------------------------------:|
-| $i、j$两列互换，$A(i,j)$            | $i、j$两行互换，$A(i,j)$              |
-| $i$列乘数$k$，$A(i(k))$           | $i$行乘数$k^{-1}$，$A(i(k^{-1}))$   |
-| $j$列乘数$k$加到$i$列上去，$A(i,j(k))$ | $i$行乘数$-k$加到$j$行上去，$A(j,i(-k))$ |
+| 初等列变换$C(R_1R_2...R_f)$        | 矩阵相似对应的行变换$(R_f^{-1}...R_2^{-1}R_1^{-1})C$ |
+|:-----------------------------:|:------------------------------------------:|
+| $i、j$两列互换，$A(i,j)$            | $i、j$两行互换，$A(i,j)$                         |
+| $i$列乘数$k$，$A(i(k))$           | $i$行乘数$k^{-1}$，$A(i(k^{-1}))$              |
+| $j$列乘数$k$加到$i$列上去，$A(i,j(k))$ | $i$行乘数$-k$加到$j$行上去，$A(j,i(-k))$            |
+
+| 作用                      |
+|:-----------------------:|
+| 选择题中，快速找到与矩阵$A$相似的矩阵$B$ |
+| 求$P$                    |
+
++ **前提/局限性**：需要矩阵$A$到$B$差别不大，容易看出怎么转换
 
 ---
 
 #### 正交矩阵
 
-        **概念**：$A$为方阵，$A^TA=AA^T=E$，则A为正交矩阵
+        **概念**：$A$为方阵，$A^TA=AA^T=E$，则$A$为正交矩阵
 
 | 性质                                                              |
 |:---------------------------------------------------------------:|
-| 若$A$是正交矩阵，则$\vert A\vert＝1$或$-1$                                |
+| 若$A$是正交矩阵，则$\vert A\vert＝1$或$-1$，$A$可逆                          |
 | 若$A$是正交矩阵，则$A^{-1}＝A^T$，$A^T$正交，$A^-1$正交                        |
 | 若$A、B$是正交矩阵，则$AB$也是正交矩阵                                         |
 | 若$A$是正交矩阵，$\alpha，\beta$为列向量，则$(A\alpha，A\beta)＝(\alpha，\beta)$ |
@@ -498,13 +508,27 @@ $$
 
 ---
 
+#### 分块矩阵
+
+        **概念**：将矩阵划分为几部分，**用于证明齐次线性方程组性质，对角化与特征值联系**
+
+| 分块矩阵运算       | 方法                      |
+|:------------:|:-----------------------:|
+| 分块矩阵加减、数乘、乘法 | 同矩阵加减、数乘、乘法             |
+| 矩阵×分块矩阵的正确思路 | 矩阵看成1行1列的分块矩阵           |
+| 分块矩阵的转置      | 先把子块视作元素求转置，再对每个子块求转置   |
+| 分块矩阵行列式      | 配合一个$O$的分块用拉普拉斯定律       |
+| 分块矩阵求逆       | 需要设逆分块矩阵中每个对应矩阵为未知数，解方程 |
+
+---
+
 #### 对角化
 
         **概念**：
 
 1. $A$~$\wedge$（$P^{-1}AP=\wedge$）,特征值是所有$\wedge$对角线元素，特征向量是$P$所有列向量
 
-2. 还需要让$P$的所有列向量正交化、单位化，使得$P$为正交矩阵，注意$P$在书写上要对应$\wedge$
+2. 可选择让$P$的所有列向量正交化、单位化，得$P$为正交矩阵，注意$P$在书写上要对应$\wedge$
 
         **证明**：
 
@@ -523,6 +547,34 @@ $$
 | 对角化的**充分必要条件**：n阶方阵具有n个线性无关的特征向量 |
 | 对角化的**充分不必要条件**：n阶方阵具有n个不同特征值    |
 | **对称矩阵**一定能对角化                   |
+
+---
+
+#### 相似非对角的P
+
+**例1**：若$A$相似于$B$，$A、B$都可以对角化，求可逆矩阵$P$，使得$P^{-1}AP=B$
+
+1. **求相同的特征值**：因性质$A、B$有相同的特征值
+
+2. **求各自的特征向量组**：$Q^{-1}AQ=\wedge=R^{-1}BR$
+
+3. $P=QR^{-1}$
+
+---
+
+**例2**：若二次型$x^TAx$，经过正交替换$x=Py$，得到二次型$y^TBy$，求正交矩阵$P$
+
+1. 因正交矩阵，有正交相似$x^TAx=y^TP^{T}APy=y^TP^{-1}APy=y^TBy$
+   
+   所以上述问题被转换成$P^{-1}AP=B$
+
+2. 因而$A、B$具有**相同特征值**
+
+3. 求各自正交替换为标准型，即**求各自的正交特征向量组**
+   
+   $Q^{T}AQ=Q^{-1}AQ=\wedge=R^{-1}BR=R^{T}BR$
+
+4. $P=QR^{-1}$，$P$即为正交矩阵（因为正交矩阵相乘，仍为正交矩阵）
 
 ---
 
@@ -571,6 +623,18 @@ $$
 | 反身性  | 向量组$\alpha$等价于向量组$\alpha$                                                     |
 | 对称性  | 若向量组$\alpha$等价于向量组$\beta$，则向量组$\beta$等价于向量组$\alpha$                           |
 | 连续性  | 若向量组$\alpha$等价于向量组$\beta$，向量组$\beta$等价于向量组$\gamma$，则向量组$\alpha$等价于向量组$\gamma$ |
+
+**向量等价和矩阵等价的联系**
+
++ 由n个n维向量$\alpha_1、\alpha_2...\alpha_n$构成的方阵$A$中，这些向量组称为方阵$A$的一个**基**。
+
++ $\alpha_1、\alpha_2...\alpha_n$的**等价向量组**$\beta_1、\beta_2...\beta_n$也是方阵$A$的一个**基**。
+
++ $A$的**等价方阵**$B$拆分为向量组$\beta_1、\beta_2...\beta_n$后也是方阵$A$的一个**基**。
+
++ 若有**可逆方阵**$C$，使得$AC=B$，$C$称为**基**$A$到**基**$B$的**过渡矩阵**。
+  
+  即等价矩阵A到B只做初等列变换，这些初等列表换集合称为**过渡矩阵**，而过渡矩阵的求法往往需要依据向量等价（于上文矩阵除法说明）。
 
 ---
 
@@ -626,12 +690,12 @@ $$
 
         **意义**：向量垂直
 
-| 术语    | 说明                                         |
-|:-----:|:------------------------------------------:|
-| 向量内积  | 同方向向量的向量乘法，记$(\alpha,\beta)=\alpha\beta^T$ |
-| 向量长度  | $\|\alpha\|$                               |
-| 向量单位化 | 使向量长度为1，$×\frac{1}{\|\alpha\|}$            |
-| 正交向量组 | 不存在零向量，向量组内两两正交                            |
+| 术语      | 说明                                                         |
+|:-------:|:----------------------------------------------------------:|
+| 向量内积及计算 | $\alpha·\beta=(\alpha,\beta)=\alpha×\beta^T=\alpha\beta^T$ |
+| 向量长度    | $\|\alpha\|=\sqrt{\alpha·\alpha}$                          |
+| 向量单位化   | 使向量长度为1，$×\frac{1}{\|\alpha\|}$                            |
+| 正交向量组   | 不存在零向量，向量组内两两正交                                            |
 
         **施密特正交化**：将线性无关的向量组，转为正交向量组
 
@@ -786,7 +850,7 @@ $$
 |:---------:|:------------------------------------------:|:---------------------------------------:|
 | 配方法       | 求二次型$f(x_1,x_2,x_3)=0$时，$x$的通解，配方后用齐次线性方程组 | $y=C^{-1}x，(C^{-1})^{T}\wedge C^{-1}=A$ |
 | 初等变换法     | 求规范型$\wedge$，$C$无要求                        | $x=Cy，C^TAC=\wedge$                     |
-| 正交替换、特征值法 | 求标准型$\wedge$，$C$需正交化，单位化                   | \                                       |
+| 正交替换、特征值法 | 求标准型$\wedge$，$C$正交矩阵                       | \                                       |
 
 ---
 
@@ -800,7 +864,7 @@ $$
 
 ---
 
-#### 初等变换法
+#### 二次型的初等变换法
 
         **初等变换法证明**：$f＝y^T(C^TAC)y$，使得$C^TAC＝\wedge,x=Cy$
 
@@ -825,25 +889,25 @@ $$
 
 4. 当$A$变成$\wedge$，$E$就变成$C$，此外若$\wedge$主对角线先按1，-1，0的连续顺序则为**规范形**
 
-| 初等列变换                        | 矩阵合同对应的行变换                   |
-|:----------------------------:|:----------------------------:|
-| $i、j$两列互换，$A(i,j)$           | $i、j$两行互换，$A(i,j)$           |
-| $i$列乘数$k$，$A(i(k))$          | $i$行乘数$k$，$A(i(k))$          |
-| $j$列乘$k$加到$i$列上去，$A(i,j(k))$ | $j$行乘$k$加到$i$行上去，$A(i,j(k))$ |
+| 初等列变换$C(R_1R_2...R_f)$       | 矩阵合同对应的行变换$(R_f^T...R_2^TR_1^T)C$ |
+|:----------------------------:|:---------------------------------:|
+| $i、j$两列互换，$A(i,j)$           | $i、j$两行互换，$A(i,j)$                |
+| $i$列乘数$k$，$A(i(k))$          | $i$行乘数$k$，$A(i(k))$               |
+| $j$列乘$k$加到$i$列上去，$A(i,j(k))$ | $j$行乘$k$加到$i$行上去，$A(i,j(k))$      |
 
-| 规范形术语 | 说明          |
-|:-----:|:-----------:|
-| 正惯性指数 | 规范形中1的项数    |
-| 负惯性指数 | 规范形中-1的项数   |
-| 符号差   | 正惯性指数-负惯性指数 |
+| 规范形术语 | 规范型中        | 特征值中        |
+|:-----:|:-----------:|:-----------:|
+| 正惯性指数 | 1的项数        | 正的个数        |
+| 负惯性指数 | -1的项数       | 负的个数        |
+| 符号差   | 正惯性指数-负惯性指数 | 正惯性指数-负惯性指数 |
 
 ---
 
 #### 正交替换法
 
-1. 求$f＝x^TAx$中，对称矩阵$A$的**对角化**
+1. 求$f＝x^TAx$中，对称矩阵$A$的**对角化**，（**必须正交化、单位化**）
 
-2. $\wedge$就是$\wedge$，对角化的特征向量组$P$就是$C$
+2. $\wedge$就是$\wedge$，正交特征向量组$P$就是$C$
 
 ---
 
@@ -866,7 +930,7 @@ $$
 | 等价   | 矩阵$A、B$ | 可逆矩阵$P、Q$ | $PAQ=B$      | \        |
 | 合同   | 方阵$A、B$ | 可逆矩阵$P$   | $P^TAP=B$    | 等价       |
 | 相似   | 方阵$A、B$ | 可逆矩阵$P$   | $P^{-1}AP=B$ | 等价       |
-| 正交相似 | 方阵$A、B$ | 正交可逆矩阵$P$ | $P^{-1}AP=B$ | 相似、合同、等价 |
+| 正交相似 | 方阵$A、B$ | 正交矩阵$P$   | $P^{-1}AP=B$ | 相似、合同、等价 |
 
 + 都具有反身性、对称性、连续性。
 
@@ -883,3 +947,11 @@ $$
 + 都具有交换律。
 
 ---
+
+### 三种初等变换法
+
+| 分类      | 说明                                  | 步骤              |
+|:-------:|:-----------------------------------:|:---------------:|
+| 求可逆矩阵   | $（A\vert E）->（E\vert A^{-1}）$       | 只做行             |
+| 求相似矩阵及P | $（\frac{A}{E}）->（\frac{B}{P}）$      | 先列后行，列行交替，行对应列逆 |
+| 求二次型标准形 | $（\frac{A}{E}）->（\frac{\wedge}{C}）$ | 先列后行，列行交替，行对应列  |
