--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分二</h1>
 
-<div align="right">最近更新时间：2023-09-08</div>
+<div align="right">最近更新时间：2023-09-30</div>
 
 ## 多元函数
 
@@ -176,7 +176,8 @@ $$
 
 $$
 \lim_{Δx→0,Δy→0}f(x_0+Δx,y_0+Δy)=f(x_0,y_0)+Z_x'Δx+Z_y'Δy\\
-(x_0,y_0)处的微分表示为：dZ|_{(x_0,y_0)}=Z_x'Δx+Z_y'Δx=Z_x'dx+Z_y'dx
+(x_0,y_0)处的微分表示为(纵轴变换量公式)：\\
+dZ|_{(x_0,y_0)}=f(x_0+Δx,y_0+Δy)-f(x_0,y_0)=Z_x'Δx+Z_y'Δx
 $$
 
                 即要加上**全部微小变化×对应偏导**
@@ -244,7 +245,7 @@ $$
 2. **雅可比行列式**：
 
 $$
-J(r,\theta)=
+J\frac{\partial(x,y)}{\partial(r,\theta)}=
 \left \vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}  &  \frac{\partial x}{\partial \theta}\\
@@ -286,7 +287,7 @@ $$
 2. **雅可比行列式**：$x=u+1，y=v+2$
    
    $$
-   J(x,y)=
+   J\frac{\partial(x,y)}{\partial(u,v)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial u}  &  \frac{\partial x}{\partial v}\\
@@ -307,7 +308,7 @@ $$
    
    被积$f(x,y)$**对应为**：$f(u+1,v+2)×1$
 
-4. **再换元转极坐标**：略
+4. **二次换元转极坐标**：略
 
 ---
 
@@ -318,7 +319,7 @@ $$
 2. **雅可比行列式**：
    
    $$
-   J(r,\theta)=
+   J\frac{\partial(x,y)}{\partial(r,\theta)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}  &  \frac{\partial x}{\partial \theta}\\
@@ -402,9 +403,10 @@ $$
 \begin{align*}
 & \iiint_\Omega g(x,y,z)dxdydz \\
 =& \int_{z下限}^{z上限}dz\iint_Dg(x,y,z)dxdy\\
-&若g(x,y,z)仅包含z，则可以用面积公式直接求解\\
-=& \int_{z下限}^{z上限}g(x,y,z)dz\iint_D1dxdy\\
-=& S_D\int_{z下限}^{z上限}g(x,y,z)dz\\
+&若g(x,y,z)=g_2(z)，且每个面的面积公式相同，则提前，直接求解\\
+=& \int_{z下限}^{z上限}g_2(z)dz\iint_D1dxdy\\
+=& \int_{z下限}^{z上限}g_2(z)S_Ddz\\
+&若g(x,y,z)≠g_2(z)，则把z看作是常数，老老实实进行dxdy的二重积分
 \end{align*}
 $$
 
@@ -427,7 +429,7 @@ $$
 2. **三阶雅可比行列式**：
 
 $$
-J(r,\theta,z)=
+J\frac{\partial(x,y,z)}{\partial(r,\theta,z)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}
@@ -479,7 +481,7 @@ $$
 2. **三阶雅可比行列式**：
    
    $$
-   J(r,\theta,z)=
+   J\frac{\partial(x,y,z)}{\partial(r,\theta,z)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}
@@ -522,7 +524,7 @@ b\sin\theta  &  br\cos\theta  &  0
 2. **三阶雅可比行列式**：
    
    $$
-   J(r,\phi,\theta)=
+   J\frac{\partial(x,y,z)}{\partial(r,\phi,\theta)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}
@@ -565,7 +567,7 @@ b\sin\theta  &  br\cos\theta  &  0
 2. **三阶雅可比行列式**：
    
    $$
-   J(r,\phi,\theta)=
+   J\frac{\partial(x,y,z)}{\partial(r,\phi,\theta)}=
 \left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}
@@ -651,7 +653,7 @@ $$
 | 偏导数   | 某方向切线斜率，光滑    | 切线斜率，光滑    | 导数      |
 | 全微分   | 利用全部偏导数，做近似计算 | 利用导数，做近似计算 | 微分      |
 | 二重积分  | 由面，积高，求体积     | 由线，积高，求面积  | 积分      |
-| 三重积分  | 由体积，积密度，求质量   | 由线，积高，求面积  | 积分      |
+| 三重积分  | 由体积，积密度，求质量   | \          | \       |
 
 ---
 
@@ -668,15 +670,17 @@ $$
 
 + $\ln$公式：$\ln a-\ln b=\ln\frac ab，\ln a+\ln b=\ln ab$
 
-| 收敛保持运算、性质                                                            |
-|:--------------------------------------------------------------------:|
-| 收敛通项数乘，仍然收敛（同广义积分）                                                   |
-| 收敛通项±收敛通项，仍然收敛 （同广义积分）                                               |
-| 收敛级数，任加括号仍然收敛。发散级数，任去括号后仍然发散                                         |
-| 收敛的必要不充分条件是：通项趋于0，有$\lim_{n\to\infty}通项_n=\lim_{n\to\infty}通项_{n+1}$ |
-| 收敛通项＋发散通项，必发散                                                        |
-| 发散通项＋发散通项，未必发散                                                       |
-| 若\|通项\|收敛，则原通项收敛                                                     |
+| 收敛保持运算、性质                    |
+|:----------------------------:|
+| 收敛通项数乘，仍然收敛（同广义积分）           |
+| 收敛通项±收敛通项，仍然收敛 （同广义积分）       |
+| 收敛级数，任加括号仍然收敛。发散级数，任去括号后仍然发散 |
+| 收敛的必要不充分条件是：通项趋于0            |
+| 收敛通项＋发散通项，必发散                |
+| 发散通项＋发散通项，未必发散               |
+| 若\|通项\|收敛，则原通项收敛（同广义积分）      |
+| 若原列收敛，则子列收敛，且所有子列收敛一样        |
+| （逆否命题）若子列发散，或两个子列收敛不同，则原列发散。 |
 
 ---
 
@@ -735,13 +739,14 @@ x=0，x收敛半径0\\
 \end{align*}
 $$
 
-| 性质                       |
-|:------------------------:|
-| 两个幂级数通项相加，收敛半径取最小        |
-| S(x)在x的收敛域内是连续的          |
-| 幂级数通项求导后，收敛域不变，端点需要重新判断  |
-| 幂级数通项求积分后，收敛域不变，端点需要重新判断 |
-| 幂级数求和凑等比为$x、-x$          |
+| 性质                                   |
+|:------------------------------------:|
+| 两个幂级数通项相加，收敛半径取最小                    |
+| $S(x)$在$x$的收敛域内是连续的                  |
+| 幂级数通项求导后，收敛域不变，端点需要重新判断              |
+| 幂级数通项求积分后，收敛域不变，端点需要重新判断             |
+| 幂级数求和：先导后积（可能联系到微分方程，求系数重要点$S(0)=0$） |
+| 幂级数求和：凑等比为$x、-x$                     |
 
 ---
 
@@ -798,7 +803,9 @@ $$
 | 一阶线性（齐次）$y'＋p(x)y＝0$     | $y＝Ce^{-\int p(x)dx}$                              |
 | 一阶线性（非齐次）$y'＋p(x)y＝q(x)$ | $y＝(\int q(x)e^{\int p(x)dx}dx＋C)e^{-\int p(x)dx}$ |
 
- ---
++ 一阶线性微分方程解的推演：$(UV)'=U'V+UV'$
+
+---
 
 ### 高阶常微分方程
 
@@ -807,6 +814,7 @@ $$
 | 可分离$y^{(n)}$的                 | 直接多次求不定积分得$y$                                                                                                       |
 | 二阶线性常系数（齐次）<br>$y''＋py'＋qy＝0$ | **构造特征方程**，$r^2＋pr＋q＝0$<br>Δ>0时，解为$r_1，r_2$<br>$y＝C_1e^{r_1x}＋C_2e^{r_2x}$<br>Δ=0时，解为$r$<br>$y＝C_1e^{rx}＋C_2e^{rx}$ |
 | 二阶线性常系数（非齐次）$y''＋py'＋qy＝f(x)$ | 齐次解+特解                                                                                                              |
+| 欧拉方程$x^2y''＋xpy'＋qy＝f(x)$     | 换元$x=e^t，t=lnx$，则$x^2y''=y_t''-y_t'，xy'=y_t'$，得到y关于t的二阶线性常系数（非齐次）                                                   |
 
 ---
 
@@ -823,17 +831,34 @@ $$
 
 ## 平面方程
 
-        **概念**：空间中的平面可以用二元函数表示，即$z=g(x,y)$
+| 术语   | 二维                                                                                                                        | 三维                                                                                                                                                                                                                                   |
+|:----:|:-------------------------------------------------------------------------------------------------------------------------:|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
+| 平面方程 | $f(x,y)=0$                                                                                                                | $f(x,y,z)=0$                                                                                                                                                                                                                         |
+| 切点   | $(x_0,y_0)$                                                                                                               | $(x_0,y_0,z_0)$                                                                                                                                                                                                                      |
+| 法向量  | $(f_x'，f_y')\vert_{(x_0,y_0)}$                                                                                            | $(f_x'，f_y'，f_z')\vert_{(x_0,y_0,z_0)}$                                                                                                                                                                                              |
+| 切方程  | 切线方程$f_x'(x-x_0)＋f_y'(y-y_0)＝0$                                                                                           | 切平面方程$f_x'(x-x_0)＋f_y'(y-y_0)＋f_z'(z-z_0)＝0$                                                                                                                                                                                         |
+| 法线   | $\frac{x-x_0}{f_x'}=\frac{y-y_0}{f_y'}$                                                                                   | $\frac{x-x_0}{f_x'}=\frac{y-y_0}{f_y'}=\frac{z-z_0}{f_z'}$                                                                                                                                                                           |
+| \    | \                                                                                                                         | \                                                                                                                                                                                                                                    |
+| 方向向量 | $l=(i,j)$                                                                                                                 | $l=(i,j,k)$                                                                                                                                                                                                                          |
+| 向量长度 | $\|l\|=\sqrt{i^2＋j^2}$                                                                                                    | $\|l\|=\sqrt{i^2＋j^2＋k^2}$                                                                                                                                                                                                           |
+| 方向余弦 | $(\cos\alpha,\cos\beta)=(\frac{i}{\|l\|},\frac{j}{\|l\|},\frac{k}{\|l\|})$                                                | $(\cos\alpha,\cos\beta,\cos\gamma)=(\frac{i}{\|l\|},\frac{j}{\|l\|},\frac{k}{\|l\|})$                                                                                                                                                |
+| 方向导数 | $(f_x'，f_y')×(\cos\alpha,\cos\beta)$                                                                                      | $(f_x'，f_y'，f_z')×(\cos\alpha,\cos\beta,\cos\gamma)$                                                                                                                                                                                 |
+| \    | \                                                                                                                         | \                                                                                                                                                                                                                                    |
+| 封闭区域 | $D$是$f(x,y)$围成的封闭区域                                                                                                       | $\Omega$是$f(x,y,z)$围成的封闭区域                                                                                                                                                                                                           |
+| 密度函数 | $\rho(x,y)$                                                                                                               | $\rho(x,y,z)$                                                                                                                                                                                                                        |
+| 形心   | $(\frac{\iint_Dxd\sigma}{\iint_D1d\sigma},\frac{\iint_Dyd\sigma}{\iint_D1d\sigma})$                                       | $(\frac{\iiint_\Omega xd\sigma}{\iiint_\Omega 1d\sigma},\frac{\iiint_\Omega yd\sigma}{\iiint_\Omega 1d\sigma},\frac{\iiint_\Omega zd\sigma}{\iiint_\Omega 1d\sigma})$                                                                |
+| 质心   | $(\frac{\iint_Dx\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma},\frac{\iint_Dy\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma})$ | $(\frac{\iiint_\Omega x\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma},\frac{\iiint_\Omega y\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma},\frac{\iiint_\Omega z\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma})$ |
+| 面积   | $\iint_D1d\sigma$                                                                                                         | \                                                                                                                                                                                                                                    |
+| 体积   | \                                                                                                                         | $\iiint_\Omega 1d\sigma$                                                                                                                                                                                                             |
+| 表面积  | \                                                                                                                         | $\iint_{于xoy的投影面}\sqrt{1+(z_x')^2+(z_y')^2}dxdy$                                                                                                                                                                                     |
 
-        点到原点的距离公式：$\sqrt{(x-x_0)^2＋(y-y_0)^2＋(z-z_0)^2}$
++ **法向量**是对于**某切点**的概念。
 
-        对应的三元方程：$f(x,y,z)=0=z-g(x,y)$
++ **法向量**可以求**法线、切方程、方向导数**。
 
-        用三元方程求点的**法向量**：$(f_x'，f_y'，f_z')$
++ **两点间的距离公式**：$\sqrt{(x_1-x_2)^2＋(y_1-y_2)^2+(z_1-z_2)^2}$
 
-        用三元方程求过**切点**$(x_0,y_0)$**切平面**：$f_x'(x-x_0)＋f_y'(y-y_0)＋f_z'(z-z_0)＝0$
-
-        用三元方程求过**切点**$(x_0,y_0)$**法线**：$\frac{x-x_0}{f_x'}=\frac{y-y_0}{f_y'}=\frac{z-z_0}{f_z'}$
++ **方向导数含未知数最大值时：法向量平行于方向余弦。**
 
 ---
 
@@ -879,39 +904,9 @@ $1+\cot^2a=\csc^2a$
 
 ---
 
-## 形心质心公式
-
-        **形心**：是几何形状的中心，在对称轴交点上
-
-        **质心**：质量中心，若密度均匀，则质心=形心
-
-        在平面$D$上的**形心**为：
-
-$$
-x_0=\frac{\iint_Dxd\sigma}{\iint_D1d\sigma}，
-y_0=\frac{\iint_Dyd\sigma}{\iint_D1d\sigma}
-$$
-
-        在立体$\Omega$上的**形心**为：
-
-$$
-x_0=\frac{\iiint_\Omega xd\sigma}{\iiint_\Omega 1d\sigma}，
-y_0=\frac{\iiint_\Omega yd\sigma}{\iiint_\Omega 1d\sigma},
-z_0=\frac{\iiint_\Omega zd\sigma}{\iiint_\Omega 1d\sigma}
-$$
-
-        在平面D上的**质心**为（其中$\rho(x,y)$为密度函数）：
-
-$$
-x_0=\frac{\iint_Dx\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma}，
-y_0=\frac{\iint_Dy\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma}
-$$
-
----
-
 ## 向量旋度、散度公式
 
-向量$A(x,y,z)=Pi+Qj+Rk$，其中$P、Q、R$为函数可偏导，则有$A$的**旋度**为
+向量$A(x,y,z)=Pi+Qj+Rk$，其中$P、Q、R$为函数可偏导，则有$A$的**旋度**为按第一行代数余子式展开：
 
 $$
 rotA=
@@ -929,24 +924,8 @@ P & Q & R
 (\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})k
 $$
 
-+ 代数余子式按第一行展开
-
-向量$A$的**散度**为
+向量$A$的**散度**为：
 
 $$
 divA=\frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y}+\frac{\partial R}{\partial z}
-$$
-
----
-
-## 方向导数公式
-
- 函数为$f(x,y,z)$，在点$(a,b,c)$，沿着向量$n(i,j,k)$方向导数为：
-
-$$
-f_x'\cos\alpha +f_y'\cos\beta +f_z'\cos\gamma\\
-其中，\cos\alpha=\frac{i}{\|n\|}，
-\cos\beta=\frac{j}{\|n\|}，
-\cos\gamma=\frac{k}{\|n\|}\\
-f_x'、f_y'、f_z'导数是点(a,b,c)的导数
 $$
