--- a/pages/M04概率论与数理统计.md
+++ b/pages/M04概率论与数理统计.md
@@ -1,6 +1,6 @@
 <h1 align="center">概率论与数理统计</h1>
 
-<div align="right">最近更新时间：2023-09-08</div>
+<div align="right">最近更新时间：2023-09-30</div>
 
 ## 概率基础
 
@@ -180,7 +180,7 @@
 | 超几何分布 | 离散  | 总共$N$个分两类(一类$N_1$个/二类$N_2$个)，取n个取到一类有k个                             | $P\{X＝k\}＝(C_{N_1}^kC_{N_2}^{n-k})/C_N^n$    | \               | \                    | \                 |
 | 均匀分布  | 连续  | $f(x)＝\frac{1}{b-a}$，$a<x<b$                                        | $F(x)＝\frac{x-a}{b-a}$                       | $\frac{a+b}{2}$ | $\frac{（b-a)^2}{12}$ | $U(a,b)$          |
 | 指数分布  | 连续  | $f(x)＝\lambda e^{-\lambda x}$，$\lambda>0,x>0$                       | $F(x)＝1-e^{-\lambda x}$                      | $\frac1\lambda$ | $\frac1{\lambda^2}$  | $E(\lambda)$      |
-| 正态分布  | 连续  | $f(x)=\frac{1}{\sigma\sqrt {2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | \                                            | $\mu$           | $\sigma^2$           | $N(\mu,\sigma^2)$ |
+| 正态分布  | 连续  | $f(x)=\frac{1}{\sigma\sqrt {2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | $\phi(x)$                                    | $\mu$           | $\sigma^2$           | $N(\mu,\sigma^2)$ |
 
 + 超几何分布式是不放回模型，如果N相对于n很大，放不放回对概率几乎没有影响，可看成放回模型的二项分布。
 
@@ -238,6 +238,8 @@ $$
 <br>
 
         任何非标准正太分布$Y-N(μ,σ^2)$与标准正太分布$X-N(0,1)$的样本空间关系是：$Y=\sigma X+\mu$
+
++ 函数分布和分布的联合\运算期望，可转为单X的特殊期望。如$E(XY)=E(Xg(X))$
 
 ---
 
@@ -534,7 +536,7 @@ $$
 | 未修正样本方差 | $S^2=\frac1n\sum_{i=1}^n(X_i-\overline X)^2$     |
 | 修正样本方差  | $S^2=\frac1{n-1}\sum_{i=1}^n(X_i-\overline X)^2$ |
 | 样本均值的期望 | $E(\overline X)=EX$                              |
-| 样本均值的方差 | $D(\overline X)=\frac1nDX$                       |
+| 样本均值的方差 | $D(\overline X)=\frac{1}{n}DX$                   |
 
 ---
 
