--- a/pages/M02微积分一.md
+++ b/pages/M02微积分一.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分一</h1>
 
-<div align="right">最近更新时间：2023-09-08</div>
+<div align="right">最近更新时间：2023-09-30</div>
 
 ## 集合
 
@@ -126,13 +126,12 @@
 
 + 平方和公式：$(a+b)^2=a^2+2ab+b^2$
 
-| 重要极限 | 说明                                                                             |
-|:----:|:------------------------------------------------------------------------------:|
-| 夹逼准则 | 当$g(x)≤f(x)≤h(x)$，$g(x)$和$h(x)$极限都为$a$，则$f(x)$极限也为$a$，构造$g(x)、h(x)$以求极限        |
-| 自然数  | $\lim_{x \to\infty}(1＋\frac{1}{x})^x=\lim_{x→0}(1＋x)^{\frac{1}{x}}＝e$，$x$可能是凑的 |
+| 重要极限 | 说明                                                                                             |
+|:----:|:----------------------------------------------------------------------------------------------:|
+| 夹逼准则 | 当$g(x)≤f(x)≤h(x)$，$g(x)$和$h(x)$极限都为$a$，则$f(x)$极限也为$a$，构造$g(x)、h(x)$以求极限                        |
+| 自然数  | $\lim_{x \to0}(1+\frac{1}{x})^x＝e^{\ln(1+\frac1{x})^x}=e^{x\ln(1+\frac1{x})}=e^{x\frac1{x}}=e$ |
 
 + $连续复利=e^{rt}（r年利率，t为年数）$
-+ $\lim_{x \to\infty}(\frac{x+1}{x})^x＝e，\lim_{x \to\infty}(\frac{x}{x+1})^x＝e^{-1}$
 
 ---
 
@@ -168,7 +167,7 @@
 
 ---
 
-### 无穷小比较
+### 无穷小比较和等价替换
 
 | 无穷小比较                   | 说明                                    |
 |:-----------------------:|:-------------------------------------:|
@@ -177,25 +176,64 @@
 | $f(x)$是$g(x$)的**同阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝C（C是常数）$ |
 | $f(x)$是$g(x$)的**等价无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝1$       |
 
-| 等价无穷小      | 等价无穷小              |
-|:----------:|:------------------:|
-| $\ln(1＋x)$ | $x$                |
-| $e^x-1$    | $x$                |
-| $a^x-1$    | $xlna$             |
-| $(1＋x)^a$  | $1＋ax$             |
-| $\sin x$   | $x$                |
-| $\tan x$   | $x$                |
-| $\cos x$   | $1-\frac{1}{2}x^2$ |
+**在求极限出现$\frac{0}{0}$型（必要条件）用等价无穷小替换，可进行化简：**
 
-+ 解释有两种方法：在$x→0$处的导数相等（洛必达法则）、泰勒展开
+| 等价无穷小（复杂型）$\lim_{x→0}下$ | 等价无穷小（简单型）$\lim_{x→0}下$ |
+|:-----------------------:|:-----------------------:|
+| $\ln(1＋x)$              | $x$                     |
+| $e^x-1$                 | $x$                     |
+| $a^x-1$                 | $xlna$                  |
+| $(1＋x)^a-1$             | $ax$                    |
+| $\sin x$                | $x$                     |
+| $\tan x$                | $x$                     |
+| $1-\cos x$              | $\frac{1}{2}x^2$        |
+| $x-\tan x$              | $-\frac{1}{3}x^3$       |
 
-+ **等价无穷小在求极限的时候可以互相替换，注意x可以是个函数。**
++ **来源：麦克劳林展开到含x的最高非0项**
+
++ **理解/解释**：洛必达法则导数相等(前提是可导可洛)，画图法斜率相等
+
++ **扩展1：表格中的x可以是个函数**
+  
+  例1：$\lim_{x→0}\ln(1＋x^4)$时，有$\lim_{x^4\to0}$，使$\ln(1＋x^4)\sim x^4$
+  
+  例2：$\lim_{x→6}\ln(1＋(x-6)^4)$时，有$\lim_{(x-6)\to0}$，使$\ln(1＋(x-6)^4)\sim (x-6)^4$
+
++ **扩展2：被替换的可以是任何趋于0的最外边非加减部分**
+  
+  例1：$\lim_{x→0}\int_0^{1-\cos x}(\ln(1+t^2))^3dt$时，
+  
+  推$1-\cos x\to0，F(t)\vert_0^{1-\cos x}，t\to0，t^2\to0，\ln(1+t^2)\to0$
+  
+  有$\lim_{t^2\to0}$，使$\int_0^{1-\cos x}(\ln(1+t^2))^3dt\sim\int_0^{1-\cos x} (t^2)^3dt=\frac17(1-\cos x)^7$
+  
+  有$\lim_{x\to0}$，使$\frac17(1-\cos x)^7\sim\frac17(\frac12x^2)^7=\frac1{7×2^7}x^{14}$
 
 ---
 
 ### 洛必达法则
 
-        **概念**：当$\lim_{x→x_0}f(x)＝\lim_{x→x_0}g(x)＝0$（即需$\frac00$型）时，且$x_0$领域内可导，且$g'(x)≠0$，则有$lim_{x→x_0}\frac{f(x)}{g(x)}＝lim_{x→x_0}\frac{f'(x)}{g'(x)}=a或\infty$。
+| 概念                                                                         | 说明               |
+|:--------------------------------------------------------------------------:|:----------------:|
+| 当$\lim_{x→x_0}f(x)＝\lim_{x→x_0}g(x)＝0$                                     | **即需$\frac00$型** |
+| 且$x_0$的去心领域内可导                                                             | **必须先可导**        |
+| 且$g'(x)≠0$                                                                 | **即分母为常数不用继续导了** |
+| 则有$\lim_{x→x_0}\frac{f(x)}{g(x)}＝\lim_{x→x_0}\frac{f'(x)}{g'(x)}=a或\infty$ | **即结果不能为虚数**     |
+
++ 结论不可逆
+
++ **证明/理解**：
+
+$$
+\begin{align*}
+因可导，有&f'(x_0)=\lim_{x→x_0}\frac{f(x)-f(x_0)}{x-x_0}\\
+&g'(x_0)=\lim_{x→x_0}\frac{g(x)-g(x_0)}{x-x_0}\\
+所以&\lim_{x→x_0}\frac{f'(x)}{g'(x)}
+=\lim_{x→x_0}\frac{f(x)-f(x_0)}{g(x)-g(x_0)}
+=\lim_{x→x_0}\frac{f(x)-0}{g(x)-0}
+=\lim_{x→x_0}\frac{f(x)}{g(x)}
+\end{align*}
+$$
 
 ---
 
@@ -228,6 +266,8 @@ $$
 | $\cos x=\sum_{n=0}^{\infty}(-1)^n\frac{x^{2n}}{(2n)!}$     | $\cos 1=\sum_{n=0}^{\infty}(-1)^n\frac{1}{(2n)!}$   |
 | $\sin x=\sum_{n=0}^{\infty}(-1)^n\frac{x^{2n+1}}{(2n+1)!}$ | $\sin 1=\sum_{n=0}^{\infty}(-1)^n\frac{1}{(2n+1)!}$ |
 
+**性质**：$f(x)=g(x)h(x)=[g(x)展开]×[h(x)展开]$
+
 ---
 
 ## 连续
@@ -252,7 +292,7 @@ $$
         **概念**：$f(x)$在$x_0$领域有定义，$Δx≠0$，$Δx＋x_0∈x_0$领域时，$x_0$导数为：
 
 $$
-f'(x_0)＝\lim_{Δx→0}\frac{Δy}{Δx}=\lim_{x\to x_0}\frac{f(x)-f(x_0)}{x-x_0}
+f'(x_0)＝\lim_{Δx→0}\frac{Δy}{Δx}=\lim_{x\to x_0}\frac{f(x)-f(x_0)}{x-x_0}=a(a为任意实数，不能\infty)
 $$
 
         即**左切线斜率=右切线斜率**。
@@ -335,13 +375,13 @@ $$
 
 ### 参数函数求导
 
-        **参数函数**：在$y$关于$x$的函数中，分别给出是关于第三个参数$t$的表达式。
+        **参数函数**：在$y$关于$x$的函数中，有$y=f(t)，x=g(t)（t为参数）$
 
-        **参数函数求导$y'$方法**：
+        **参数函数求导公式**：
 
-1. 两个函数分别对参数t求导，得到$\frac{dy}{dt}、\frac{dx}{dt}$。
+1. $\frac{dy}{dx}=\frac{dy}{dt}÷\frac{dx}{dt}$
 
-2. 最后让求导结果相除：$\frac{dy}{dx}=\frac{dy}{dt}÷\frac{dx}{dt}$
+2. $\frac{d^2y}{dx^2}=\frac{d\frac{dy}{dx}}{dt}÷\frac{dx}{dt}$
 
 ---
 
@@ -351,7 +391,8 @@ $$
 
 $$
 \lim_{Δx→0}f(x_0+Δx)=f(x_0)+f'(x)Δx\\
-x_0处的微分表示为：dx|_{x=x_0}=f'(x)Δx=f'(x)dx
+x_0处的微分表示为(纵轴变化量公式)：\\
+dx|_{x=x_0}=f(x_0+Δx)-f(x_0)=f'(x)Δx
 $$
 
         **关系**：$可微<=>可导->连续$
@@ -472,13 +513,14 @@ $$
 
         **概念**：$y$关于$x$的函数中，$x$在不定积分的上限中。
 
-| 公式                                                        |
+| 求导公式                                                      |
 |:---------------------------------------------------------:|
 | $(\int_a^xf(t)dt)'＝f(x)，(\int_x^af(t)dt)'＝-f(x)$          |
 | $(\int_a^{g(x)}f(t)dt)'＝f(g(x))g(x)'$                     |
 | $(\int_{h(x)}^{g(x)}f(t)dt)'＝f(g(x))g(x)' - f(h(x))h(x)'$ |
 
 + 下限可以转上限，上下限可以分段转上限，本质还是积分上限。
++ 绝对值可以转积分上限函数$\int_{0}^{1}\vert t^2-x^2\vert dt(-1<x<1)=\int_{0}^{\vert x\vert} x^2-t^2 dt+\int_{\vert x\vert}^{1}t^2-x^2 dt$
 
 ---
 
